# isocline

./: .gitignore  CMakeLists.txt  LICENSE  free  isocline.cabal  isocline.pc.in  package.yaml  readme.md  repline.cabal  stack.yaml
doc/: doxyfile
docs/: dir_d44c64559bbebec7f509842c48db8b23.html  group__alloc.html  group__alloc.js  group__async.html  group__async.js  group__bbcode.html  group__bbcode.js  group__completex.html  group__completex.js  group__completion.html  group__completion.js  group__custom.html  group__custom.js  group__helper.html  group__helper.js  group__highlight.html  group__highlight.js  group__history.html  group__history.js  group__options.html  group__options.js  group__readline.html  group__readline.js  group__term.html  group__term.js  index.html  isocline_8h_source.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  searchdata.js  typedefs_0.js
haskell/: Example.hs  readme.md
haskell/System/Console/: Isocline.hs  Repline.hs
ide/vs2019/: example.vcxproj  example.vcxproj.filters  isocline.sln  isocline.vcxproj  isocline.vcxproj.filters  repline.sln  repline.vcxproj  repline.vcxproj.filters
ide/vs2022/: example.vcxproj  isocline.sln  isocline.vcxproj  isocline.vcxproj.filters
include/: isocline.h  repline.h
src/: attr.c  attr.h  bbcode.c  bbcode.h  bbcode_colors.c  common.c  common.h  completers.c  completions.c  completions.h  editline.c  editline_completion.c  editline_help.c  editline_history.c  env.h  highlight.c  highlight.h  history.c  history.h  history_sqlite.c  isocline.c  repline.c  stringbuf.c  stringbuf.h  term.c  term.h  term_color.c  tty.c  tty.h  tty_esc.c  undo.c  undo.h  wcwidth.c
test/: Example.hs  example.c  test_colors.c
util/: hsdist.sh
